# piyo

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .swift-format  .swiftformat  .swiftlint.yml  Cargo.toml  README.de.md  README.fr.md  README.ja.md  README.md  README.zh.md  astro.config.ts  cliff.toml  diesel.toml  index.html  justfile  lefthook.yml  mise.toml  package.json  project.yml  tsconfig.app.json  tsconfig.bun.json  tsconfig.json  tsconfig.node.json  vendir.lock.yml  vendir.yml  vite.config.ts
.github/workflows/: release.yml
Piyo/: AppResources.swift  ContentView.swift  Git.swift  Localizable.xcstrings  PiyoApp.swift  RepoStore.swift  SidebarItem.swift  TerminalPane.swift
Piyo/Assets.xcassets/AppIcon.appiconset/: Contents.json
Piyo/Repositories/: Git.swift  Repo.swift  RepoStore.swift  Worktree.swift
Piyo/Shell/: RootView.swift  SidebarView.swift  WorktreeDetailView.swift
Piyo/Terminal/: TerminalCommand.swift  TerminalPane.swift
apps/desktop/: .gitignore  .swiftformat  .swiftlint.yml
apps/desktop/Sources/: Localizable.xcstrings  PiyoApp.swift
apps/desktop/Sources/Assets.xcassets/: Contents.json
apps/desktop/Sources/Repositories/: RepoStore.swift
apps/desktop/Sources/Shell/: RootView.swift  WorktreeDetailView.swift
apps/desktop/Sources/Terminal/: TerminalCommand.swift  TerminalPane.swift
apps/web/: .gitignore  astro.config.ts  package.json
assets/: icon.af
crates/core/: .gitignore  Cargo.toml
crates/core/migrations/2025-06-26-000000_initial/: up.sql
crates/core/src/: store.rs
docs/: .gitignore  index.md  package.json  rspress.config.ts  tsconfig.json
docs/.vitepress/: config.ts
docs/docs/: _nav.json  index.md
docs/docs/guide/: _meta.json
docs/docs/guide/use-mdx/: components.mdx
docs/docs/guide/use-mdx/code-blocks/: index.mdx  meta.md  title.md
docs/src/: index.md
docs/superpowers/plans/: 2026-05-09-tabs.md
docs/superpowers/specs/: 2026-05-08-claude-shim-osc777-design.md  2026-05-09-tabs-design.md
migrations/: 0001_initial.sql
migrations/2025-06-26-000000_initial/: down.sql  up.sql
patches/: @xterm%2Faddon-image@0.10.0-beta.219.patch
scripts/: build-icon.sh  build-zmx.sh
src/: App.css  App.tsx  git.rs  lib.rs  main.tsx  menu.ts  schema.rs  store.rs  terminal.ts  useSidebarPanel.ts  workspaceMenu.ts  workspaceStore.ts  workspaces.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: default.toml
src-tauri/icons/: icon.icns
src-tauri/scripts/: codex-notify
src-tauri/shell/bash/: piyo.bash
src-tauri/shell/fish/vendor_conf.d/: piyo.fish
src-tauri/shell/zsh/: .zshenv
src-tauri/src/: accent.rs  appearance.rs  config.rs  context_menu.rs  fs.rs  icon.rs  input.rs  keycode.rs  lib.rs  macos.rs  main.rs  osc.rs  pty.rs  quit.rs  shell.rs  specta_builder.rs  theme.rs  vt.rs  wire.rs
src-tauri/src/macos/: bindings.h  context_menu.m  macos.h  mod.rs  native_tabs.rs  piyo.h  quit_handler.m  refresh_rate.m  secure_input.rs  system_appearance.m
src-tauri/src/pty/: handle.rs  listeners.rs  mod.rs  types.rs
src-tauri/src/vt/: decode.rs  mod.rs  modes.rs
src-tauri/themes/: catppuccin-macchiato.css  default.css  rose-pine.css
src/components/: AddWorkspaceButton.tsx  CommandPalette.tsx  FileTree.tsx  FileTreePanel.tsx  FileTreeToggle.tsx  Sidebar.tsx  SidebarToggle.tsx  TabBar.tsx  TabTitle.tsx  TabsBridge.tsx  Terminal.tsx  TerminalScrollbar.tsx  TerminalSearchBar.tsx  Titlebar.tsx  WorkspaceIcon.tsx  WorkspaceSidebar.tsx  WorkspaceView.tsx
src/hooks/: useFileIcon.ts  useNativeTabs.ts  useTabsLifecycle.ts  useXterm.ts
src/ipc/: commands.ts  events.ts  types.ts
src/lib/: binaryDecoder.test.ts  binaryDecoder.ts  fsBridge.ts  i18n.test.ts  i18n.ts  inputModifiers.test.ts  inputModifiers.ts  menu.ts  ptyModes.test.ts  ptyModes.ts  theme.ts  updater.ts  useTabsLifecycle.ts  utils.test.ts  xtermDeadKey.ts  xtermGhostty.ts  xtermGraphicsOverlay.ts  xtermInput.ts  xtermInternals.ts  xtermMouse.ts  xtermPtyBridge.ts
src/lib/services/: accent.ts  icon.ts  updates.ts
src/locales/: de.json  en.json  fr.json  ja.json  zh.json
src/stores/: accent.ts  settings.ts  tabs.test.ts  tabs.ts  theme.ts  workspaces.test.ts  workspaces.ts
