[package]
name = "piyo"
version = "0.0.2"
description = "The coziest terminal emulator"
authors = ["Sōta"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "piyo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
config = { version = "0.15", default-features = false, features = ["toml"] }
etcetera = "0.11"
portable-pty = "0.9"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["rt", "macros"] }
vte = "0.15"
whoami = "2"
window-vibrancy = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
